Issue #3402234: Fix not showing inline images in Node edit form ( CKEditor 5 ) when inserted using the media library button

--- a/scss/theme/varbase_media.common.scss
+++ b/scss/theme/varbase_media.common.scss
@@ -237,7 +237,7 @@ figure {
       // Generate media query if needed.
       @include media-breakpoint-up($breakpoint) {
         &.media--view-mode-large {
-          min-width: $container-max-width;
+          max-width: $container-max-width;
         }
       }
     }
